@@ -6,6 +6,8 @@ Changes up to 0.98
 
    beta31
 
+   * scene renaming
+
    * dihedral display during dihedral bond torsion editing
 
    beta30
